Move width desktop-xl to desktop size to fix components bleeding over the edge of the browser

--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -19,7 +19,10 @@
 
   @media (min-width: $desktop) {
     column-count: 4;
-    max-width: $desktop-xl;
+  }
+
+  @media (min-width: $desktop) {
+    width: $desktop-xl;
   }
 }
 
